--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Paddy website</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://kit.fontawesome.com/6e8799c987.js" crossorigin="anonymous"></script>
+    <style>
+        .active-category {
+            background-color: #ef4444;
+            /* red-500 */
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
@@ -78,8 +86,8 @@
                 <p class="text-sm text-gray-600">It is a long established fact that a reader will be distracted by the
                     readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has
                     a.</p>
-                <button class="btn rounded-xl bg-[#0E7A81] text-white">View More</button><img src="images/pet.webp"
-                    alt="cat and dog">
+                <a href="#special"><button class="btn rounded-xl bg-[#0E7A81] text-white">View More</button></a>
+                <img src="images/pet.webp" alt="cat and dog">
             </div>
 
         </section>
@@ -103,11 +111,12 @@
             </div>
 
             <!-- sort div -->
-            <div class="flex items-center justify-between my-10 px-5">
+            <div id="special" class="flex items-center justify-between my-10 px-5">
                 <p class="md:text-2xl text-xl font-semibold">Best deal for you</p>
                 <div>
                     <!-- You can open the modal using ID.showModal() method -->
-                    <button class="btn md:text-xl text-base rounded-lg bg-[#0E7A81] text-white" onclick="my_modal_3.showModal()">Sort By Price</button>
+                    <button class="btn md:text-xl text-base rounded-lg bg-[#0E7A81] text-white"
+                        onclick="my_modal_3.showModal()">Sort By Price</button>
                     <dialog id="my_modal_3" class="modal">
                         <div class="modal-box">
                             <form method="dialog">
@@ -120,10 +129,38 @@
                 </div>
             </div>
 
-
-
         </section>
+
+        <!-- card section -->
+
+        <section>
+            <div class="md:w-4/5 w-full mx-auto flex md:flex-row flex-col-reverse gap-5 items-start">
+                <div id="card-container" class="md:w-[70%] w-full grid md:grid-cols-3 grid-cols-1 md:gap-3 gap-2">
+
+                </div>
+
+                <div id="photo-container" class="md:w-[30%] w-full grid md:grid-cols-2 grid-cols-3 gap-5 md:p-0 p-5">
+
+                </div>
+            </div>
+            <div class="flex justify-center mt-5">
+                <button id="showAll" class="btn md:text-xl text-base rounded-lg bg-[#0E7A81] text-white">Show
+                    All</button>
+            </div>
+            <div class="md:hidden block">
+                <a href="#photo-container"
+                    class="fixed bottom-5 right-5 px-4 py-2 bg-[#0E7A81] text-white rounded-lg shadow-lg hover:bg-[#0b6167] transition-all duration-300"><i
+                        class="fa-solid fa-thumbs-up"></i>
+                    Favourites
+                </a>
+
+            </div>
+        </section>
+
+        
     </main>
+
+
 
     <script src="js/videos.js"></script>
 </body>
