--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div id="special" class="flex items-center justify-between my-10 px-5">
                 <p class="md:text-2xl text-xl font-semibold">Best deal for you</p>
                 <div>
-                    <!-- You can open the modal using ID.showModal() method -->
+                    <!-- Open modal using ID.showModal() -->
                     <button class="btn md:text-xl text-base rounded-lg bg-[#0E7A81] text-white"
                         onclick="my_modal_3.showModal()">Sort By Price</button>
                     <dialog id="my_modal_3" class="modal">
@@ -122,12 +122,18 @@
                             <form method="dialog">
                                 <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
                             </form>
-                            <h3 class="text-lg font-bold">Hello!</h3>
-                            <p class="py-4">Press ESC key or click on ✕ button to close</p>
+                            <h3 class="text-lg font-bold">Sort Pets by Price</h3>
+                            <div class="flex gap-3 mt-4">
+                                <button type="button" class="btn btn-sm bg-green-500 text-white"
+                                    onclick="sortCurrentCards('asc')">Low to High</button>
+                                <button type="button" class="btn btn-sm bg-red-500 text-white"
+                                    onclick="sortCurrentCards('desc')">High to Low</button>
+                            </div>
                         </div>
                     </dialog>
                 </div>
             </div>
+
 
         </section>
 
@@ -136,6 +142,20 @@
         <section>
             <div class="md:w-4/5 w-full mx-auto flex md:flex-row flex-col-reverse gap-5 items-start">
                 <div id="card-container" class="md:w-[70%] w-full grid md:grid-cols-3 grid-cols-1 md:gap-3 gap-2">
+                    <!-- laoding screen -->
+                    <div id="loading-screen" class="hidden">
+                        <div id="loading-screen" class="fixed inset-0 bg-white flex items-center justify-center z-50">
+                            <div class="flex flex-col items-center space-y-4">
+                                <!-- Spinning circle -->
+                                <div
+                                    class="w-12 h-12 border-4 border-t-4 border-t-[#0E7A81] border-gray-300 rounded-full animate-spin">
+                                </div>
+                                <!-- Optional text -->
+                                <p class="text-gray-600 text-lg font-medium">Loading...</p>
+                            </div>
+                        </div>
+
+                    </div>
 
                 </div>
 
@@ -157,7 +177,26 @@
             </div>
         </section>
 
-        
+        <!-- Details modals -->
+        <section>
+            <!-- Open the modal using ID.showModal() method -->
+            <button id="btn-details" class="btn hidden" onclick="my_modal_5.showModal()">open modal</button>
+            <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+                <div class="modal-box">
+                    <div id="details-container">
+
+                    </div>
+                    <div class="modal-action">
+                        <form method="dialog">
+                            <!-- if there is a button in form, it will close the modal -->
+                            <button class="btn">Close</button>
+                        </form>
+                    </div>
+                </div>
+            </dialog>
+        </section>
+
+
     </main>
 
 
