--- a/index.html
+++ b/index.html
@@ -143,20 +143,7 @@
             <div class="md:w-4/5 w-full mx-auto flex md:flex-row flex-col-reverse gap-5 items-start">
                 <div id="card-container" class="md:w-[70%] w-full grid md:grid-cols-3 grid-cols-1 md:gap-3 gap-2">
                     <!-- laoding screen -->
-                    <div id="loading-screen" class="hidden">
-                        <div id="loading-screen" class="fixed inset-0 bg-white flex items-center justify-center z-50">
-                            <div class="flex flex-col items-center space-y-4">
-                                <!-- Spinning circle -->
-                                <div
-                                    class="w-12 h-12 border-4 border-t-4 border-t-[#0E7A81] border-gray-300 rounded-full animate-spin">
-                                </div>
-                                <!-- Optional text -->
-                                <p class="text-gray-600 text-lg font-medium">Loading...</p>
-                            </div>
-                        </div>
-
-                    </div>
-
+                    <span class="loading loading-bars loading-xl hidden"></span>
                 </div>
 
                 <div id="photo-container" class="md:w-[30%] w-full grid md:grid-cols-2 grid-cols-3 gap-5 md:p-0 p-5">
