--- a/index.html
+++ b/index.html
@@ -140,17 +140,20 @@
         <!-- card section -->
 
         <section>
+            <div id="spinner" class="flex justify-center hidden">
+                <!-- laoding screen -->
+                <span class="loading loading-bars loading-xl "></span>
+            </div>
             <div class="md:w-4/5 w-full mx-auto flex md:flex-row flex-col-reverse gap-5 items-start">
                 <div id="card-container" class="md:w-[70%] w-full grid md:grid-cols-3 grid-cols-1 md:gap-3 gap-2">
-                    <!-- laoding screen -->
-                    <span class="loading loading-bars loading-xl hidden"></span>
+
                 </div>
 
                 <div id="photo-container" class="md:w-[30%] w-full grid md:grid-cols-2 grid-cols-3 gap-5 md:p-0 p-5">
 
                 </div>
             </div>
-            <div class="flex justify-center mt-5">
+            <div id="showAllDiv" class="flex justify-center mt-5">
                 <button id="showAll" class="btn md:text-xl text-base rounded-lg bg-[#0E7A81] text-white">Show
                     All</button>
             </div>
