spinner functionality working for all

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <!-- card section -->
 
         <section>
-            <div id="spinner" class="flex justify-center hidden">
+            <div id="spinner" class="flex justify-center hidden my-5 md:w-4/5 w-full">
                 <!-- laoding screen -->
                 <span class="loading loading-bars loading-xl "></span>
             </div>
