--- a/index.html
+++ b/index.html
@@ -170,15 +170,18 @@
         <!-- Details modals -->
         <section>
             <!-- Open the modal using ID.showModal() method -->
-            <button id="btn-details" class="btn hidden" onclick="my_modal_5.showModal()">open modal</button>
-            <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
-                <div class="modal-box">
-                    <div id="details-container">
+            <!-- new modal -->
+            <!-- You can open the modal using ID.showModal() method -->
+            <button id="btn-details" class="btn hidden" onclick="my_modal_4.showModal()">open modal</button>
+            <dialog id="my_modal_4" class="modal">
+                <div class="modal-box w-11/12 max-w-5xl">
+                    <!-- modal container -->
+                    <div id="details-container" class="space-y-3">
 
                     </div>
                     <div class="modal-action">
                         <form method="dialog">
-                            <!-- if there is a button in form, it will close the modal -->
+                            <!-- if there is a button, it will close the modal -->
                             <button class="btn">Close</button>
                         </form>
                     </div>
