--- a/index.html
+++ b/index.html
@@ -189,6 +189,29 @@
             </dialog>
         </section>
 
+        <!-- Adopt modal -->
+        <section>
+
+            <!-- Open the modal using ID.showModal() method -->
+             <div>
+            <button id="adopt-btn" class="btn hidden" onclick="my_modal_1.showModal()">open modal</button>
+            <dialog id="my_modal_1" class="modal">
+                <div class="modal-box">
+                    <!-- adopt container -->
+                    <div id="adopt-container" class="flex flex-col items-center justify-center">
+
+                    </div>
+                    <div class="modal-action">
+                        <form method="dialog">
+                            <!-- if there is a button in form, it will close the modal -->
+                            <button class="btn">Close</button>
+                        </form>
+                    </div>
+                </div>
+            </dialog>
+            </div>
+        </section>
+
 
     </main>
 
