--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </header>
 
 
-    <main>
+    <main class="md:p-5 p-2 md:mb-5 mb-1">
         <!-- hero section -->
         <section class="hero md:min-h-screen min-h-[700px] mx-auto">
             <div class="flex flex-col items-center justify-center lg:w-3/5 md:w-4/5 w-9/10 text-center space-y-7">
@@ -140,7 +140,7 @@
         <!-- card section -->
 
         <section>
-            
+
             <div class="md:w-4/5 w-full mx-auto flex md:flex-row flex-col-reverse gap-5 items-start">
                 <div id="card-container" class="md:w-[70%] w-full grid md:grid-cols-3 grid-cols-1 md:gap-3 gap-2">
 
@@ -158,7 +158,7 @@
                 <button id="showAll" class="btn md:text-xl text-base rounded-lg bg-[#0E7A81] text-white">Show
                     All</button>
             </div>
-            <div class="md:hidden block">
+            <div id="sticky" class="md:hidden block">
                 <a href="#photo-container"
                     class="fixed bottom-5 right-5 px-4 py-2 bg-[#0E7A81] text-white rounded-lg shadow-lg hover:bg-[#0b6167] transition-all duration-300"><i
                         class="fa-solid fa-thumbs-up"></i>
@@ -191,7 +191,7 @@
         </section>
 
         <!-- Adopt modal -->
-        <section>
+        <section >
 
             <!-- Open the modal using ID.showModal() method -->
             <div>
@@ -213,6 +213,40 @@
             </div>
         </section>
     </main>
+
+    <!-- footer section -->
+    <section id="footer" class=" bg-neutral">
+        <footer class=" mx-auto md:w-4/5 w-full footer sm:footer-horizontal text-neutral-content md:px-10 px-7 py-20 flex flex-col md:flex-row md:justify-between">
+            <nav class="md:w-[33%] w-full">
+                <div class="flex items-center justify-center gap-2">
+                    <img class="w-6 h-6 block" src="images/logo.webp" alt="peddy logo">
+                    <h6 class="text-2xl font-semibold">Peddy</h6>
+                </div>
+                
+                <a class="link link-hover">Location: av. Washington 165, NY CA 54003</a>
+                <a class="link link-hover">Phone: +31 85 964 47 25</a>
+                <a class="link link-hover">Email: info@yourdomain.com</a>
+                <a class="link link-hover">Openings hours: 9.00 AM - 5.00 PM</a>
+
+                <div class="flex gap-3">
+            <a href=""><img class="h-8 w-8" src="https://img.icons8.com/?size=100&id=uLWV5A9vXIPu&format=png&color=000000" alt=""></a><a href=""><img class="h-8 w-8" src="https://img.icons8.com/?size=100&id=bG29Ckcdp6YP&format=png&color=000000" alt=""></a><a href=""><img class="h-8 w-8" src="https://img.icons8.com/?size=100&id=19318&format=png&color=000000" alt=""></a><a href=""><img class="h-8 w-8" src="https://img.icons8.com/?size=100&id=32323&format=png&color=000000" alt=""></a>
+                </div>
+            </nav>
+            <nav class="md:w-[33%] w-full ">
+                <h6 class="footer-title">Useful links</h6>
+                <a class="link link-hover">home</a>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Animals</a>
+                <a class="link link-hover">Foundation</a>
+                <a class="link link-hover">Contact</a>
+            </nav>
+            <nav class="space-y-1 mx-auto md:w-[33%] w-auto">
+                <h6 class="footer-title">Drop a message</h6>
+                <input type="text" placeholder="Enter your Email" class="input text-black w-full" />
+                <button class="btn bg-[#0E7A81] border-none text-white w-full">Subscribe</button>
+            </nav>
+        </footer>
+    </section>
 
 
 
